# pydata_iceberg_demo

./: .gitignore  README.md  docker-compose.yaml  generate_data.py  prepare_data.py  pyproject.toml  requirements.in  requirements.txt  test.http
images/jupyter/: Dockerfile  requirements.in  requirements.txt
notebooks/: 01. Datalakes.ipynb  01. The Ally.ipynb  02. Table Formats.ipynb  02. The Mentor.ipynb  03. Iceberg Demo.ipynb  03. The Herald.ipynb  04. AWS Iceberg.ipynb  04. The Shapeshifter .ipynb  05. The Blockbuster.ipynb  06. Ascension.ipynb  BONUS Duckdb.ipynb
src/pydata/: cli.py  data_lake.py  dremio.py  exceptions.py  kaggle_data.py
src/pydata_iceberg/: __main__.py  cli.py  data.py  settings.py
tf/: main.tf  providers.tf  variables.tf
