[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich",
    "kaggle",
    "httpx",
    "typer>=0.13.0",
    "platformdirs>=4.3.6",
    "polars>=1.14.0",
    "duckdb>=1.1.3",
    "pycparser>=2.22",
    "fsspec[s3]>=2024.10.0",
]

[project.scripts]
demo = "pydata.cli:app"
